syntax = "proto3";

package inventory;

service InventoryService {
  rpc GetTonKho(GetTonKhoRequest) returns (GetTonKhoResponse);
  rpc GetAllTonKhos(GetAllTonKhosRequest) returns (GetAllTonKhosResponse);
  // ... các RPCs khác cho Inventory service
}

message GetTonKhoRequest {
  string id = 1;
}

message GetTonKhoResponse {
  TonKho tonKho = 1;
}

message GetAllTonKhosRequest {

}

message GetAllTonKhosResponse {
  repeated TonKho tonKhos = 1;
}

message TonKho {
  int32 id = 1;
  int32 san_pham_id = 2;
  int32 kho_hang_id = 3;
  int32 so_luong = 4;
  string ngay_cap_nhat = 5;
}